@@ -9,9 +9,9 @@
 EXTRA_DIST= gv.1
 
 info_TEXINFOS = gv.texi
-gv_TEXINFOS = gpl.texi version.texi
+gv_TEXINFOS = gpl.texi
 
 man_MANS = gv.1
 
-gv.1: ../src/versionp.h ../src/gv_message.h
-	help2man -n 'Postscript and PDF viewer' -o gv.1 ../src/gv
+$(srcdir)/gv.1: $(top_srcdir)/src/versionp.h $(top_srcdir)/src/gv_message.h
+	help2man -n 'Postscript and PDF viewer' -o $(srcdir)/gv.1 ../src/gv
