@@ -1,2 +1,0 @@
-@set EDITION @MANUALEDITION@
-@set GVVER @VERSION@
